@@ -7,18 +7,22 @@ use warnings;
 use version; our $VERSION = qv( sprintf '0.15.%d', q$Rev$ =~ /\d+/gmx );
 use parent qw(HTML::FormWidgets);
 
-__PACKAGE__->mk_accessors( qw(cols rows) );
+__PACKAGE__->mk_accessors( qw(cols config rows) );
 
 sub init {
    my ($self, $args) = @_;
 
-   $self->cols( 60 );
-   $self->rows( 1  );
+   $self->cols  ( 60 );
+   $self->config( undef );
+   $self->rows  ( 1  );
    return;
 }
 
 sub render_field {
    my ($self, $args)  = @_;
+
+   $self->id and $self->config
+      and $self->add_literal_js( 'inputs', $self->id, $self->config );
 
    $args->{class} .= ($args->{class} ? q( ): q()).($self->class || q(ifield));
 
